--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
         <h1>Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
         <section>
-          <!-- сделать невидимім <h2>Особенности</h2>  -->
-          <h2>Особенности</h2>
+          <h2>Особенности</h2> == 0
           <ul>
             <li>
               <h3>Внимание к деталям</h3>
@@ -68,17 +67,29 @@
       </section>
       <section>
         <h2>Чем мы занимаемся</h2>
-        <img src="./imeges/box1.png" alt="разработка для десктоп" width="370" />
-        <img
-          src="/imeges/box2.png"
-          alt="разработка для мобильных"
-          width="370"
-        />
-        <img
-          src="/imeges/box3.png"
-          alt="разработка для планшетов"
-          width="370"
-        />
+        <ul>
+          <li>
+            <img
+              src="./imeges/box1.png" 
+              alt="разработка для десктоп"
+              width="370"
+            />
+          </li>
+          <li>
+            <img 
+              src="./imeges/box2.png"
+              alt="разработка для мобильных"
+              width="370"
+            />
+          </li>
+          <li>
+            <img
+              src="./imeges/box3.png"
+              alt="разработка для планшетов"
+              width="370"
+            />
+          </li>
+        </ul>
       </section>
       <section>
         <h2>Наша команда</h2>
@@ -93,7 +104,9 @@
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./imeges/img2.jpg" alt="фото Ольга Репина" width="270" />
+            <img src="./imeges/img2.jpg"
+            alt="фото Ольга Репина"
+            width="270" />
             <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
