--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <title>Студія</title>
   </head>
   <body>
+    <!-- Хедер -->
     <header>
-      <a href="/" class="logo" lang="en"
-        ><span class="web-logo">Web</span>Studio</a
-      >
-      <naw>
+      <a href="index.html" lang="en"><span>Web</span>Studio</a>
+      <nav>
         <ul>
           <li>
-            <a href="">Студия</a>
+            <a href="#">Студия</a>
           </li>
           <li>
             <a href="#">Портфолио</a>
@@ -23,74 +22,84 @@
             <a href="#">Контакты</a>
           </li>
         </ul>
-      </naw>
+      </nav>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main>
+      <!-- Герой -->
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
-        <section>
-          <h2>Особенности</h2> == 0
-          <ul>
-            <li>
-              <h3>Внимание к деталям</h3>
-              <p>
-                Идейные соображения, а также начало повседневной работы по
-                формированию позиции.
-              </p>
-            </li>
-            <li>
-              <h3>Пунктуальность</h3>
-              <p>
-                Задача организации, в особенности же рамки и место обучения
-                кадров влечет за собой.
-              </p>
-            </li>
-            <li>
-              <h3>Планирование</h3>
-              <p>
-                Задача организации, в особенности же рамки и место обучения
-                кадров влечет за собой.
-              </p>
-            </li>
-            <li>
-              <h3>Современные технологии</h3>
-              <p>
-                Значимость этих проблем настолько очевидна, что реализация
-                плановых заданий.
-              </p>
-            </li>
-          </ul>
-        </section>
       </section>
+      <!-- Наши Особенности (СКРЫТЬ в css h2) -->
+      <section>
+        <h2>Наши Особенности</h2>
+        <ul>
+          <li>
+            <h3>Внимание к деталям</h3>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3>Современные технологии</h3>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!-- Чем мы занимаемся -->
       <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <img
-              src="./imeges/box1.png" 
-              alt="разработка для десктоп"
-              width="370"
-            />
+            <a href="#" target="_blank">
+              <img
+                src="./imeges/box1.png"
+                alt="разработка для десктоп"
+                width="370"
+              />
+            </a>
           </li>
           <li>
-            <img 
-              src="./imeges/box2.png"
-              alt="разработка для мобильных"
-              width="370"
-            />
+            <a href="#" target="_blank">
+              <img
+                src="./imeges/box2.png"
+                alt="разработка для мобильных"
+                width="370"
+              />
+            </a>
           </li>
           <li>
-            <img
-              src="./imeges/box3.png"
-              alt="разработка для планшетов"
-              width="370"
-            />
+            <a href="#" target="_blank">
+              <img
+                src="./imeges/box3.png"
+                alt="разработка для планшетов"
+                width="370"
+              />
+            </a>
           </li>
         </ul>
       </section>
+      <!-- Наша команда -->
       <section>
         <h2>Наша команда</h2>
         <ul>
@@ -101,14 +110,13 @@
               width="270"
             />
             <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <p lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./imeges/img2.jpg"
-            alt="фото Ольга Репина"
-            width="270" />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+              alt="фото Ольга Репина" width="270" />
+              <h3>Ольга Репина</h3>
+              <p lang="en">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -117,7 +125,7 @@
               width="270"
             />
             <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <p lang="en">Marketing</p>
           </li>
           <li>
             <img
@@ -126,11 +134,19 @@
               width="270"
             />
             <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer></footer>
+    <!-- Футер -->
+    <footer>
+      <a href="index.html" lang="en"><span>Web</span>Studio</a>
+      <address>
+        г. Киев, пр-т Леси Украинки, 26
+        <a href="mailto:info@example.com">info@example.com</a>
+        <a href="tel:+380991111111">+38 099 111 11 111</a>
+      </address>
+    </footer>
   </body>
 </html>
