add-formating-img

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <li>
             <a href="#" target="_blank">
               <img
-                src="./imeges/box1.png"
+                src="./imeges/box1.jpg"
                 alt="разработка для десктоп"
                 width="370"
               />
@@ -82,7 +82,7 @@
           <li>
             <a href="#" target="_blank">
               <img
-                src="./imeges/box2.png"
+                src="./imeges/box2.jpg"
                 alt="разработка для мобильных"
                 width="370"
               />
@@ -91,7 +91,7 @@
           <li>
             <a href="#" target="_blank">
               <img
-                src="./imeges/box3.png"
+                src="./imeges/box3.jpg"
                 alt="разработка для планшетов"
                 width="370"
               />
