--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
           </li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main>
       <!-- Герой -->
@@ -71,31 +73,25 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <a href="#" target="_blank">
-              <img
-                src="./imeges/box1.jpg"
-                alt="разработка для десктоп"
-                width="370"
-              />
-            </a>
+            <img
+              src="./imeges/box1.jpg"
+              alt="разработка для десктоп"
+              width="370"
+            />
           </li>
           <li>
-            <a href="#" target="_blank">
-              <img
-                src="./imeges/box2.jpg"
-                alt="разработка для мобильных"
-                width="370"
-              />
-            </a>
+            <img
+              src="./imeges/box2.jpg"
+              alt="разработка для мобильных"
+              width="370"
+            />
           </li>
           <li>
-            <a href="#" target="_blank">
-              <img
-                src="./imeges/box3.jpg"
-                alt="разработка для планшетов"
-                width="370"
-              />
-            </a>
+            <img
+              src="./imeges/box3.jpg"
+              alt="разработка для планшетов"
+              width="370"
+            />
           </li>
         </ul>
       </section>
@@ -113,10 +109,9 @@
             <p lang="en">Product Designer</p>
           </li>
           <li>
-            <img src="./imeges/img2.jpg"
-              alt="фото Ольга Репина" width="270" />
-              <h3>Ольга Репина</h3>
-              <p lang="en">Frontend Developer</p>
+            <img src="./imeges/img2.jpg" alt="фото Ольга Репина" width="270" />
+            <h3>Ольга Репина</h3>
+            <p lang="en">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -142,11 +137,11 @@
     <!-- Футер -->
     <footer>
       <a href="index.html" lang="en"><span>Web</span>Studio</a>
-      <address>
-        г. Киев, пр-т Леси Украинки, 26
-        <a href="mailto:info@example.com">info@example.com</a>
-        <a href="tel:+380991111111">+38 099 111 11 111</a>
-      </address>
+      <address>г. Киев, пр-т Леси Украинки, 26</address>
+      <ul>
+        <li><a href="mailto:info@example.com">info@example.com</a></li>
+        <li><a href="tel:+380991111111">+38 099 111 11 111</a></li>
+      </ul>
     </footer>
   </body>
 </html>
